[REFACTOR] removed use of deprecated fucntions