@@ -29,21 +29,17 @@ import org.springframework.test.util.ReflectionTestUtils;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.LocalDate;
-import java.util.HashMap;
-import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.Assume.assumeNoException;
-import static org.junit.Assume.assumeTrue;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import static org.mockito.ArgumentMatchers.any;
@@ -618,7 +614,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_CompleteFlow() throws Exception {
+    void testFetchUserData_CompleteFlow() {
         // Since we can't directly stub the private readResponse method, let's use doAnswer to
         // control the fetchUserData method instead of trying to test the implementation
 
@@ -960,7 +956,7 @@ class GoogleAuthServiceTest {
     @Test
     void testOpenDirectConnection_Success() throws IOException {
         // Create a test URL
-        URL testUrl = new URL("https://example.com");
+        URL testUrl = URI.create("https://example.com").toURL();
         
         // Create a subclass that overrides the method to test
         class TestService extends GoogleAuthService {
@@ -974,8 +970,7 @@ class GoogleAuthServiceTest {
                 assertEquals(testUrl, url);
                 
                 // Return a mock connection
-                HttpURLConnection mockConnection = mock(HttpURLConnection.class);
-                return mockConnection;
+                return mock(HttpURLConnection.class);
             }
         }
         
@@ -993,7 +988,7 @@ class GoogleAuthServiceTest {
     @Test
     void testOpenDirectConnection_ThrowsIOException() throws IOException {
         // Create a test URL
-        URL testUrl = new URL("https://example.com");
+        URL testUrl = URI.create("https://example.com").toURL();
         
         // Create a subclass that overrides the method to throw an exception
         class TestService extends GoogleAuthService {
@@ -1019,7 +1014,7 @@ class GoogleAuthServiceTest {
     @Test
     void testOpenProxyConnection_Success() throws IOException {
         // Create test URL and proxy
-        URL testUrl = new URL("https://example.com");
+        URL testUrl = URI.create("https://example.com").toURL();
         java.net.Proxy testProxy = new java.net.Proxy(
                 java.net.Proxy.Type.HTTP, 
                 new java.net.InetSocketAddress("proxy.example.com", 8080)
@@ -1038,8 +1033,7 @@ class GoogleAuthServiceTest {
                 assertEquals(testProxy, proxy);
                 
                 // Return a mock connection
-                HttpURLConnection mockConnection = mock(HttpURLConnection.class);
-                return mockConnection;
+                return mock(HttpURLConnection.class);
             }
         }
         
@@ -1057,7 +1051,7 @@ class GoogleAuthServiceTest {
     @Test
     void testOpenProxyConnection_ThrowsIOException() throws IOException {
         // Create test URL and proxy
-        URL testUrl = new URL("https://example.com");
+        URL testUrl = URI.create("https://example.com").toURL();
         java.net.Proxy testProxy = new java.net.Proxy(
                 java.net.Proxy.Type.HTTP, 
                 new java.net.InetSocketAddress("proxy.example.com", 8080)
@@ -1085,7 +1079,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_WithHttpsProxy() throws Exception {
+    void testFetchUserData_WithHttpsProxy() {
         // Setup test data
         String testProxyUrl = "http://proxy.example.com:8443";
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
@@ -1106,9 +1100,9 @@ class GoogleAuthServiceTest {
             @Override
             protected URL createURL(String urlString) throws MalformedURLException {
                 if (urlString.equals(testProxyUrl)) {
-                    return new URL(urlString);
+                    return URI.create(urlString).toURL();
                 }
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com").toURL();
             }
             
             @Override
@@ -1142,7 +1136,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_WithHttpProxy() throws Exception {
+    void testFetchUserData_WithHttpProxy() {
         // Setup test data
         String testHttpProxyUrl = "http://http-proxy.example.com:8080";
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
@@ -1163,9 +1157,9 @@ class GoogleAuthServiceTest {
             @Override
             protected URL createURL(String urlString) throws MalformedURLException {
                 if (urlString.equals(testHttpProxyUrl)) {
-                    return new URL(urlString);
+                    return URI.create(urlString).toURL();
                 }
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com").toURL();
             }
             
             @Override
@@ -1199,7 +1193,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_NoProxy() throws Exception {
+    void testFetchUserData_NoProxy() {
         // Setup test data
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
         
@@ -1216,7 +1210,7 @@ class GoogleAuthServiceTest {
             
             @Override
             protected URL createURL(String urlString) throws MalformedURLException {
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com/api").toURL();
             }
             
             @Override
@@ -1261,7 +1255,7 @@ class GoogleAuthServiceTest {
         
         // Mock URL and connections
         URL mockUrl = mock(URL.class);
-        doReturn(mockUrl).when(googleAuthService).createURL(eq(PEOPLE_API_BASE_URL + "?personFields=" + "birthdays"));
+        doReturn(mockUrl).when(googleAuthService).createURL(PEOPLE_API_BASE_URL + "?personFields=" + "birthdays");
         
         // Mock createURL to throw exception when used with the proxy URL
         doThrow(new MalformedURLException("Invalid proxy URL")).when(googleAuthService).createURL(invalidProxyUrl);
@@ -1332,7 +1326,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_WithEmptyHttpsProxy() throws Exception {
+    void testFetchUserData_WithEmptyHttpsProxy() {
         // Setup test data
         String emptyProxyUrl = "";  // Empty but not null
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
@@ -1358,7 +1352,7 @@ class GoogleAuthServiceTest {
                 if (!urlString.equals(emptyProxyUrl)) {
                     logger.info("No HTTPS proxy configured, using direct connection");
                 }
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com/api").toURL();
             }
             
             @Override
@@ -1408,7 +1402,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_WithMalformedHttpProxy() throws Exception {
+    void testFetchUserData_WithMalformedHttpProxy() {
         // Setup test data
         String invalidHttpProxyUrl = "invalid:url:format";
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
@@ -1435,7 +1429,7 @@ class GoogleAuthServiceTest {
                     logger.info("Invalid HTTP proxy URL, falling back to direct connection");
                     throw new MalformedURLException("Invalid proxy URL format");
                 }
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com/api").toURL();
             }
             
             @Override
@@ -1485,7 +1479,7 @@ class GoogleAuthServiceTest {
     }
 
     @Test
-    void testFetchUserData_WithEmptyHttpProxy() throws Exception {
+    void testFetchUserData_WithEmptyHttpProxy() {
         // Setup test data
         String emptyProxyUrl = "";  // Empty but not null
         String testResponse = "{\"birthdays\":[{\"date\":{\"year\":1990,\"month\":1,\"day\":1}}]}";
@@ -1511,7 +1505,7 @@ class GoogleAuthServiceTest {
                 if (!urlString.equals(emptyProxyUrl)) {
                     logger.info("No HTTP proxy configured, using direct connection");
                 }
-                return new URL("https://example.com/api");
+                return URI.create("https://example.com/api").toURL();
             }
             
             @Override
@@ -1611,7 +1605,7 @@ class GoogleAuthServiceTest {
     @Test
     void testOpenDirectConnection_WithActualURL() throws IOException {
         // Create a test URL for an actual site
-        URL testUrl = new URL("https://httpbin.org/get");
+        URL testUrl = URI.create("https://httpbin.org/get").toURL();
         
         // Call the actual method (not a mock or subclass)
         HttpURLConnection result = googleAuthService.openDirectConnection(testUrl);
@@ -1625,7 +1619,9 @@ class GoogleAuthServiceTest {
     // Helper method to check if network is available
     private boolean isNetworkAvailable() {
         try {
-            return Runtime.getRuntime().exec("ping -c 1 google.com").waitFor() == 0;
+            ProcessBuilder processBuilder = new ProcessBuilder("ping", "-c", "1", "google.com");
+            Process process = processBuilder.start();
+            return process.waitFor() == 0;
         } catch (Exception e) {
             return false;
         }
@@ -1637,7 +1633,7 @@ class GoogleAuthServiceTest {
         assumeTrue(isNetworkAvailable(), "Network not available for proxy test");
         
         // Create a test URL
-        URL testUrl = new URL("https://httpbin.org/get");
+        URL testUrl = URI.create("https://httpbin.org/get").toURL();
         
         // Create a proxy - using a common test proxy port
         java.net.Proxy testProxy = new java.net.Proxy(
@@ -1686,7 +1682,7 @@ class GoogleAuthServiceTest {
         // Use reflection to access the private method
         Method method = GoogleAuthService.class.getDeclaredMethod("createNetHttpTransport");
         method.setAccessible(true);
-        NetHttpTransport transport = (NetHttpTransport) method.invoke(googleAuthService);
+        method.invoke(googleAuthService);
         
         // Capture logs to verify correct path
         verify(mockAppender).doAppend(loggingEventCaptor.capture());
@@ -1709,17 +1705,17 @@ class GoogleAuthServiceTest {
             doAnswer(invocation -> {
                 String urlString = invocation.getArgument(0);
                 if (urlString.equals(testProxyUrl)) {
-                    return new URL(testProxyUrl);
+                    return URI.create(testProxyUrl).toURL();
                 }
                 fail("Unexpected URL: " + urlString);
                 return null;
-            }).when(googleAuthService).createURL(eq(testProxyUrl));
+            }).when(googleAuthService).createURL(testProxyUrl);
             
             // Call the method that uses createNetHttpTransport
-            GoogleIdTokenVerifier verifier = googleAuthService.createIdTokenVerifier();
+            GoogleIdTokenVerifier googleVerifier = googleAuthService.createIdTokenVerifier();
             
             // Verify result is not null
-            assertNotNull(verifier);
+            assertNotNull(googleVerifier);
             
             // Verify correct log message was generated for proxy usage
             boolean foundProxyLog = listAppender.list.stream()
@@ -1746,7 +1742,7 @@ class GoogleAuthServiceTest {
         try {
             // Make createURL throw exception for the invalid proxy
             doThrow(new MalformedURLException("Invalid proxy URL"))
-                .when(googleAuthService).createURL(eq(invalidProxyUrl));
+                .when(googleAuthService).createURL(invalidProxyUrl);
             
             // Call the method that uses createNetHttpTransport
             GoogleAuthorizationCodeTokenRequest request = 
@@ -1779,10 +1775,10 @@ class GoogleAuthServiceTest {
         
         try {
             // Call the method that uses createNetHttpTransport
-            GoogleIdTokenVerifier verifier = googleAuthService.createIdTokenVerifier();
+            GoogleIdTokenVerifier googleVerifier = googleAuthService.createIdTokenVerifier();
             
             // Verify result is not null
-            assertNotNull(verifier);
+            assertNotNull(googleVerifier);
             
             // Verify log about direct connection
             boolean foundDirectConnectionLog = listAppender.list.stream()
@@ -1832,7 +1828,7 @@ class GoogleAuthServiceTest {
         GoogleAuthService service = new GoogleAuthService(userService, jwtService, refreshTokenService);
         
         // Create test URL 
-        URL testUrl = new URL("https://example.com");
+        URL testUrl = URI.create("https://example.com").toURL();
         
         // Create two different types of proxies to test
         java.net.Proxy httpProxy = new java.net.Proxy(
